--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,13 @@ unidecode
 reportlab
 pytz
 streamlit-autorefresh
+xlrd>=2.0.1
+xlsxwriter>=3.2.0
+PyPDF2
+tabula-py
+camelot-py[cv]
+pytesseract
+Pillow
+pdfplumber
+
 
