--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit==1.52.2  # force reinstall
 pandas
 numpy
 gspread
@@ -21,5 +21,6 @@ camelot-py[cv]
 pytesseract
 Pillow
 pdfplumber
+psycopg2-binary
 
 
