--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,10 @@ pytesseract
 Pillow
 pdfplumber
 psycopg2-binary
+google-api-python-client>=2.0.0
+google-auth-httplib2>=0.1.0
+google-auth-oauthlib>=1.0.0
+
+
 
 
